samples/_failures_safe/1761657919_e3ee7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99cf6dfd.c: In function ‘main’:
./samples/SAFE/__tmp_99cf6dfd.c:134:12: error: missing terminating " character
  134 |     printf("\nSecond matrix
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_99cf6dfd.c:134:5: error: expected expression at end of input
  134 |     printf("\nSecond matrix
      |     ^~~~~~
./samples/SAFE/__tmp_99cf6dfd.c:134:5: error: expected declaration or statement at end of input
